<resources>
    <string name="app_name">Autographa Go</string>
    <string name="unzip_file">Unzip file</string>

    <string name="search_hint">Search</string>
    <string name="highlights">Highlights</string>
    <string name="bookmarks">Bookmarks</string>

    <string name="select_all">SELECT ALL</string>
    <string name="highlight_text">HIGHLIGHT</string>
    <string name="remove_highlight">REMOVE HIGHLIGHT</string>
    <string name="share_text">SHARE</string>

    <string name="share_using">Share Using</string>
    <string name="title_empty">Title cannot be empty</string>

    <string name="bold">BOLD</string>
    <string name="italics">ITALICS</string>
    <string name="underline">UNDERLINE</string>
    <string name="bullets">BULLETS</string>
    <string name="cut">CUT</string>
    <string name="copy">COPY</string>
    <string name="paste">PASTE</string>
    
    <string name="discard_note">Discard Changes?</string>
    <string name="discard_note_message">Do you want to discard the note or save?</string>
    <string name="discard">DISCARD CHANGES</string>
    <string name="cancel">CANCEL</string>
    <string name="note_saved">Note saved successfully</string>

    <string name="share_body">Reading</string>
    <string name="title_notes">Note</string>

    <string name="title_books">Books</string>
    <string name="select_language">Select a Language</string>
    <string name="select_version">Select a Version</string>

    <string name="notes">Notes</string>
    <string name="history">History</string>

    <string name="text_reading_mode">Reading Mode</string>
    <string name="text_text_size">Text Size</string>

    <string name="about_us">About</string>

    <string name="take_me_to_settings">Take me to settings</string>
    <string name="try_again">Try Again</string>
    <string name="storage_permission_message">We need to access your storage to download bibles.</string>
    <string name="insufficient_storage">Insufficient Storage Space. Please clear some space on device.</string>
    <string name="night_mode">Night</string>
    <string name="day_mode">Day</string>

    <string name="clear_history">Clear</string>

    <string name="all">All</string>
    <string name="old_testament">Old Testament</string>
    <string name="new_testament">New Testament</string>

    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="no_results_found">No Results Found</string>
    <string name="settings">Settings</string>
    <string name="import_bible">Download More Bibles</string>
    <string name="search_results_found">search results found</string>
    <string name="download">DOWNLOAD</string>
    <string name="no_new_languages_available">No new languages available</string>
    <string name="network_error">Network Error</string>
    <string name="server_error">Server Error</string>
    <string name="no_new_versions_available">No new versions available</string>
    <string name="downloading_bible">Downloading Bible</string>
    <string name="downloading">Downloading...</string>
    <string name="parsing">Parsing</string>
    <string name="download_has_started">Download has started.</string>
    <string name="open_hints">Open Hints</string>
    <string name="hints">Hints</string>
    <string name="continue_reading">Continue reading where you last left</string>
    <string name="view_history">See all your reading history</string>
    <string name="search_text">Search for text</string>
    <string name="manage_notes">Manage all your notes</string>
    <string name="view_bookmarks">See all your bookmarks</string>
    <string name="view_highlights">See all your highlights</string>
    <string name="go_to_settings">Manage app settings</string>
    <string name="bible_download_finish">Bible download finished</string>

    <string name="the_autographa_project">The Autographa Project</string>
    <string name="autographa_go">Autographa Go</string>
    <string name="about_us_2">for Android is a part of the product line which are featured at </string>
    <string name="website">www.autographa.com \n\n</string>
    <string name="about_us_3">Autographa Lite (Bible Drafting Tool) \nAutographa Cloud (Online Storage Platform) \nAutographa Live (Collaborative Scripture Drafting Tool) \nAutographa Scribe (Print and Publishing Tool)\n\n</string>
    <string name="autographa_team">Autographa Team \n</string>
    <string name="about_us_4">Binu Alexander \nPrerna Singh \nJoel Mathew \nArpit Jacob \nSandeep Kumar \nSony Zacharia \nUday Kumar \n\n \u00a9 Friends of Agape 2017 under MIT License \nwww.friendsofagape.org</string>
    <string name="about_us_5">The Open Source Repo is at https://github.com/friendsofagape/Autographa_Repo . Free Bibles with no copyright or unrestricted distribution
        licenses can be added and will be considered for adding to app by repo owners. \n\nNOTE : Please do not submit copyrighted Bibles \n\n</string>

    <string name="version">Version</string>

    <string name="autographa">Autographa</string>
    <string name="text_1">literally refers to the original copies of the writings that now form your Bible. \n\nThe new </string>
    <string name="text_2">Multilingual Autographa Go</string>
    <string name="text_3">App is a part of our innovative product line-up which features at www.autographa.com. \n\nNow for the first
        time ever, we have added over forty (and counting) Indian languages that can be freely downloaded. \n\nThis Bible App is by default
        bundled with the English Unlocked Literal Bible (ULB) and the Unlocked Dynamic (UDB) Versions
        from https://unfoldingword.org/bible/ \n\n</string>
    <string name="points_heading">Key Features: \n</string>
    <string name="bullet_1">A one-stop collection of major and minor Indian language Bibles \n</string>
    <string name="bullet_2">Minimalistic and user-friendly interface \n</string>
    <string name="bullet_3">Bookmark and highlight your favourite verses \n</string>
    <string name="bullet_4">Note taking feature with clickable references \n</string>
    <string name="bullet_5">Search option \n\n</string>
    <string name="publishing">Published by Friends of Agape 2017 (MIT License) \nwww.friendsofagape.org \n\n</string>
    <string name="repo_link">Link to the Github repository for this project: https://github.com/friendsofagape/Autographa-Go \n\n</string>

    <string name="download_more">More Languages</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="one_week_ago">1 week ago</string>
    <string name="one_month_ago">1 month ago</string>
    <string name="two_months_ago">2 months ago</string>

    <string name="copyright">\u00a9 %1$d %2$s %3$s \n</string>
    <string name="backup_restore">Backup and Restore</string>

    <string name="activity_backup_drive_desc">Backing up your data to Google Drive allows you to restore all your readings in case you lose or change devices. Auto backup will happen weekly.</string>
    <string name="activity_backup_drive_button_backup">Backup now</string>
    <string name="activity_backup_drive_last">Last backup:</string>
    <string name="activity_backup_drive_folder">Backup folder</string>
    <string name="activity_backup_drive_button_open_drive">Manage on Drive</string>
    <string name="activity_backup_drive_recent">Recent backups</string>
    <string name="activity_backup_drive_dialog_restore_button_restore">Restore backup</string>
    <string name="activity_backup_drive_dialog_restore_button_cancel">Cancel</string>
    <string name="activity_backup_drive_dialog_restore_title">Revert to previous version</string>
    <string name="activity_backup_drive_dialog_restore_desc">Restoring the backup will overwrite all the existing data with the backup.</string>
    <string name="activity_backup_drive_dialog_restore_details">Backup details</string>
    <string name="title_activity_backup_drive">Google Drive Backup</string>
    <string name="activity_backup_drive_failed">Something went wrong. Please try again :/</string>
    <string name="activity_backup_drive_success">Database successfully backed up to Drive</string>
    <string name="activity_backup_drive_message_restart">Restarting to apply changes...</string>

    <string name="click_on_any_icon_to_see_hint">Click on any icon to see hint</string>
    <string name="client_not_connected_to_server">Client not connected to server</string>
    <string name="click_to_add_references">Tap button to add references</string>
    <string name="language_and_versions">Language and Versions</string>

    <string name="delete_bible">Delete Bible?</string>
    <string name="yes">YES</string>
    <string name="delete_message_language">Are you sure you want to proceed? This will delete all your saved data for this language.</string>
    <string name="delete_message_version">Are you sure you want to proceed? This will delete all your saved data for this version.</string>

    <string name="reference_not_found">The reference is not available for %1$s %2$s</string>
    <string name="ok">OK</string>
</resources>