<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text"
        android:textColor="@color/black"
        android:text="@string/activity_backup_drive_dialog_restore_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/activity_backup_drive_dialog_restore_desc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:text="@string/activity_backup_drive_dialog_restore_details"/>

    <TextView
        android:id="@+id/dialog_backup_restore_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="22/12/1997"/>

    <TextView
        android:id="@+id/dialog_backup_restore_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_padding"
        android:text="1.2MB"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_gravity="right"
        android:gravity="right">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_backup_restore_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/default_content_padding"
            android:text="@string/activity_backup_drive_dialog_restore_button_cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_backup_restore_button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/default_content_padding"
            android:text="@string/activity_backup_drive_dialog_restore_button_restore"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>