<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="?attr/title_text"
                    android:textColor="@color/white"
                    android:text="@string/hints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/layout_book"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/root_grid_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/navigation_items"
                app:layout_widthPercent="20%"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_continue_reading"
                        android:layout_width="?attr/home_button_dimen"
                        android:layout_height="?attr/home_button_dimen"
                        android:tint="@color/white"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding"
                        android:src="@drawable/ic_local_library_white" />

                    <ImageView
                        android:id="@+id/iv_history"
                        android:layout_width="?attr/home_button_dimen"
                        android:layout_height="?attr/home_button_dimen"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding"
                        android:tint="@color/white"
                        android:src="@drawable/ic_history_white" />

                    <ImageView
                        android:id="@+id/iv_search"
                        android:layout_width="?attr/home_button_dimen"
                        android:layout_height="?attr/home_button_dimen"
                        android:tint="@color/white"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding"
                        android:src="@drawable/ic_search_white" />

                    <ImageView
                        android:id="@+id/iv_notes"
                        android:layout_width="?attr/home_button_dimen"
                        android:layout_height="?attr/home_button_dimen"
                        android:tint="@color/white"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding"
                        android:src="@drawable/ic_note_white" />

                    <ImageView
                        android:id="@+id/iv_bookmark"
                        android:layout_width="?attr/home_button_dimen"
                        android:layout_height="?attr/home_button_dimen"
                        android:tint="@color/white"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding"
                        android:src="@drawable/ic_bookmark_white" />

                    <ImageView
                        android:id="@+id/iv_highlight"
                        android:visibility="gone"
                        android:layout_width="?attr/home_button_dimen"
                        android:layout_height="?attr/home_button_dimen"
                        android:tint="@color/white"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding"
                        android:src="@drawable/ic_border_color_white" />

                    <ImageView
                        android:id="@+id/iv_settings"
                        android:layout_width="?attr/home_button_dimen"
                        android:layout_height="?attr/home_button_dimen"
                        android:tint="@color/white"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding"
                        android:src="@drawable/ic_settings_white" />

                </LinearLayout>

            </ScrollView>

            <ScrollView
                android:layout_toRightOf="@id/navigation_items"
                android:id="@+id/navigation_items_right"
                app:layout_widthPercent="80%"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:visibility="invisible"
                        android:id="@+id/tv_continue_reading"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/home_button_dimen"
                        android:text="@string/continue_reading"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding" />

                    <TextView
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:visibility="invisible"
                        android:id="@+id/tv_history"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/home_button_dimen"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding"
                        android:text="@string/view_history" />

                    <TextView
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:visibility="invisible"
                        android:id="@+id/tv_search"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/home_button_dimen"
                        android:text="@string/search_text"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding" />

                    <TextView
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:visibility="invisible"
                        android:id="@+id/tv_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/home_button_dimen"
                        android:text="@string/manage_notes"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding" />

                    <TextView
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:visibility="invisible"
                        android:id="@+id/tv_bookmark"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/home_button_dimen"
                        android:text="@string/view_bookmarks"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding" />

                    <TextView
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:visibility="gone"
                        android:id="@+id/tv_highlight"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/home_button_dimen"
                        android:text="@string/view_highlights"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding" />

                    <TextView
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:visibility="invisible"
                        android:id="@+id/tv_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/home_button_dimen"
                        android:text="@string/go_to_settings"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:padding="?attr/button_padding" />

                </LinearLayout>

            </ScrollView>

        </android.support.percent.PercentRelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>